2011-08-05  Jason Merrill  <jason@redhat.com>

	* config/i386/i386.c (setup_incoming_varargs_ms_64): Move
	declarations to beginning of function.

2011-08-05  Bernd Schmidt  <bernds@codesourcery.com>

	PR rtl-optimization/49900
	* sched-ebb.c (add_deps_for_risky_insns): Also add dependencies to
	ensure basic blocks stay in the same order.

2011-08-05  Aldy Hernandez  <aldyh@redhat.com>

	* config/s390/s390.c (s390_expand_cs_hqi): Add new arguments to
	store_bit_field.
	(s390_expand_atomic): Same.

2011-08-05  Richard Henderson  <rth@redhat.com>

	PR rtl-opt/49977
	* dwarf2cfi.c (scan_insn_after): Split out of ...
	(scan_trace): ... here.  Correctly place notes wrt sequences.

2011-08-05  Kaz Kojima  <kkojima@gcc.gnu.org>
	    Richard Henderson  <rth@redhat.com>

	PR rtl-opt/49982
	* expr.c (fixup_args_size_notes): Look through no-op moves.

2011-08-05  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*push<mode>2): Use "o" constraint instead
	of "m" for operand 0.  Add type and mode attribute.
	(*pushxf_nointeger"): Use "<" constraint for operand 0.
	(*pushdf_rex64): New pattern, split out of *pushdf.  Use "m"
	constraint instead of "o" for opreand 1.
	(*pushdf): Disable for TARGET_64BIT.  Correct mode attribute.
	(*movdi_internal_rex64): Use "!o" constraint instead of "!m" for
	operand 0, alternative 4.
	(*movdf_internal_rex64): Ditto for operand 0, alernative 6.

2011-08-05  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/predicates.md (lea_address_operand): Rename from
	no_seg_address_operand.
	* config/i386/i386.md (*lea_1): Update operand 1 predicate for rename.
	(*lea_1_zext): Ditto.
	(*lea_2): Ditto.
	(*lea_2_zext): Ditto.

2011-08-05  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.c (ix86_print_operand_address): Handle SUBREGs of
	parts.base and parts.index.
	* config/i386/predicates.md (aligned_operand): Ditto.
	(cmpxchg8b_pic_memory_operand): Ditto.

2011-08-05  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
