@@ -1,3 +1,8 @@
+2011-08-05  Jan Hubicka  <jh@suse.cz>
+
+	PR middle-end/49735
+	* gcc.c-torture/compile/pr49735.c: New testcase.
+
 2011-08-05  Jason Merrill  <jason@redhat.com>
 
 	PR c++/47453
